[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/EnemyTank.gd" type="Script" id=1]
[ext_resource path="res://assets/Gun_03.png" type="Texture" id=2]
[ext_resource path="res://assets/Hull_06.png" type="Texture" id=3]
[ext_resource path="res://assets/Track_2_A.png" type="Texture" id=4]
[ext_resource path="res://assets/Track_2_B.png" type="Texture" id=5]
[ext_resource path="res://assets/Flash_A_04.png" type="Texture" id=6]
[ext_resource path="res://assets/effects/Explosion_G.png" type="Texture" id=7]
[ext_resource path="res://assets/effects/Explosion_H.png" type="Texture" id=8]
[ext_resource path="res://assets/effects/Explosion_B.png" type="Texture" id=9]
[ext_resource path="res://assets/effects/Explosion_C.png" type="Texture" id=10]
[ext_resource path="res://assets/effects/Explosion_A.png" type="Texture" id=11]
[ext_resource path="res://assets/effects/Explosion_D.png" type="Texture" id=12]
[ext_resource path="res://assets/effects/Explosion_E.png" type="Texture" id=13]
[ext_resource path="res://assets/effects/Explosion_F.png" type="Texture" id=14]
[ext_resource path="res://src/Smoke.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/effects/light (1).png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "working",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74, 37.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 322.002

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("turret/muzzleFlash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.528742, 0.51227 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "muzzle_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("turret/muzzleFlash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.528742, 0.51227 ), Vector2( 1.18042, 0.993481 ), Vector2( 0.668854, 0.562742 ) ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[node name="EnemyTank" type="KinematicBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 4
collision_mask = 15
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2.99999, 4 )
scale = Vector2( 1.14063, 1.08789 )
texture = ExtResource( 16 )
texture_scale = 0.5
color = Color( 0.992157, 0.117647, 0.117647, 1 )
energy = 1.22

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.25, -28 )
scale = Vector2( 0.636179, 0.809524 )
frames = SubResource( 3 )
animation = "working"
speed_scale = 5.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -0.25, 30 )
scale = Vector2( 0.636179, 0.809524 )
frames = SubResource( 3 )
animation = "working"
speed_scale = 5.0

[node name="body" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, 1 )
scale = Vector2( 0.596, 0.516 )
texture = ExtResource( 3 )
region_rect = Rect2( 120.489, 169.812, 47.3022, 46.7191 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="turret" type="Sprite" parent="."]
position = Vector2( -14, 1 )
scale = Vector2( 0.846574, 0.857364 )
texture = ExtResource( 2 )
offset = Vector2( 60, 0 )
region_rect = Rect2( 332.682, 29.0119, 32.7706, 13.8793 )

[node name="muzzle" type="Position2D" parent="turret"]
position = Vector2( 155.923, 1.16637 )

[node name="muzzleFlash" type="Sprite" parent="turret"]
visible = false
position = Vector2( 160.648, -5.96046e-07 )
scale = Vector2( 0.528742, 0.51227 )
texture = ExtResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/muzzle_flash = SubResource( 5 )

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1, 2 )
scale = Vector2( 0.785156, 0.777344 )
frames = SubResource( 6 )
animation = "explode"
frame = 2
speed_scale = 3.0

[node name="Smoke" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( -62, -3 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
